<resources>
    <string name="app_name">Golf Ranger</string>

    <!--DIALOG STRINGS-->
    <string name="ok">ALLOW LOCATION</string>
    <string name="permission_location_rationale">
        Golf Ranger Cannot Work Without Your Location
    </string>
    <string name="settings">
        CLICK HERE To Go To Settings and Enable Location.
    </string>

    <!--MAP STRINGS-->
    <string name="yardage_prefix">Yardage: </string>
    <string name="wind_prefix">Wind(mph): </string>
    <string name="elevation_prefix">Elevation(ft): </string>
    <string name="yardage_default">--</string>
    <string name="wind_default">--</string>
    <string name="elevation_default">--</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    <!--WIDGET STRINGS-->
    <string name="updated">updated\n</string>
    <string name="never">never</string>
    <string name="widget_last_update_pref_key" translatable="false">widgetUpdateStringKey</string>
    <string name="widget_update_init_pref_key" translatable="false">widgetUpdateInitKey</string>
    <string name="add_widget_content_description">Golf Ranger Widget</string>
    <string name="empty_widget_list">Add Players</string>
    <string name="widgetTitleContentDescription">Pressing the title Refreshes the Widget</string>
    <string name="gamesLabel">\u0020:Game(s)</string>
    <string name="holeAVGLabel">\u0020:Hole Avg</string>
    <string name="bestRoundLabel">\u0020:Best Rd.</string>

    <!--HOME SCREEN-->
    <string name="newRound">New Round</string>
    <string name="newRoundContentDescription">Start New Round</string>
    <string name="oldRound">Old Round</string>
    <string name="oldRoundContentDescription">Start Old Round</string>
    <string name="players_string">The Players</string>
    <string name="the_playersContentDescription">View players and add players</string>
    <string name="theCourses">The Courses</string>
    <string name="theCoursesContentDescription"> View courses and add courses</string>
    <string name="appIconCD">This is the app icon</string>
    
    <!--COURSES SCREEN-->
    <string name="coursesTitle">Courses</string>
    <string name="addCourseButton">Add Course</string>
    <string name="addCourseContentDescription">This Button Adds a Course</string>
    
    <!--MATCHES SCREEN-->
    <string name="roundTitle">Rounds</string>
    <string name="newRoundButton">New Round</string>
    <string name="roundContentDescription">This Button adds a new round</string>

    <!--PLAYERS SCREEN-->
    <string name="playerTitle">Players</string>
    <string name="addPlayerButton">Add Player</string>
    <string name="playerContentDescription">This button adds a Player</string>

    <!--START ROUND SCREEN-->
    <string name="startRoundTitle">Scorecard</string>
    <string name="letsPlay">Let\'s Play</string>
    <string name="letsPlayContentDescription">Starts your selected round to play</string>
    <string name="courseTitle">Course:\u0020\u0020</string>
    <string name="coursePlaceHolder">Add Course</string>
    <string name="hyphen">-</string>
    <string name="logoCD">Title Image</string>
    <string name="player1Title">Player 1:</string>
    <string name="player2Title">:Player 2</string>
    <string name="player3Title">Player 3:</string>
    <string name="player4Title">:Player 4</string>
    <string name="playerPlaceHolder">Add Player</string>
    <string name="saveRound">Save Card For Later</string>
    <string name="saveRoundContentDescription">This Button Saves the Round</string>

    <!--ROUND ACTIVITY SCREEN-->
    <string name="scorecardViewCD">This Button Switches the screen to the Scorecard</string>
    <string name="holeViewCD">This Button Switches the screen to the HoleView</string>
    <string name="mapViewCD">This Button Switches the screen to the Map</string>
    <string name="arrowCD">This Arrow Point int the direction of the wind</string>

    <!--COURSE LIST ITEM-->
    <string name="courseIconCD">Clip Art of Course</string>

    <!--HOLE FRAGMENT-->
    <string name="thePlayersTitle">The Players</string>
    <string name="theScoreTitle">The Score</string>
    <string name="initialHoleNumber" translatable="false">1▼</string>
    <string name="dropDownIcon" translatable="false">▼</string>
    <string name="holeTitle">Hole:</string>
    <string name="holeValueCD">This Button Selects the Hole to View</string>
    <string name="distanceLabel">Distance (y):</string>
    <string name="parLabel">Par:</string>
    <string name="thePuttsLabel">The Putts</string>
    <string name="thePenaltiesLabel">Penalties</string>
    <string name="girLabel">Green in Reg.</string>
    <string name="fwyInRegLabel">Fwy in Reg.</string>
    <string name="sandLabel">Sand Shots</string>
    
    <!--SCORECARD FRAGMENT-->
    <string name="scorecardHoleLabel">Hole</string>
    <string name="scorecardParLabel">Par</string>
    
    <!--HOLE# RADIO DIALOG-->
    <string name="hole1Label">Hole 1</string>
    <string name="hole2Label">Hole 2</string>
    <string name="hole3Label">Hole 3</string>
    <string name="hole4Label">Hole 4</string>
    <string name="hole5Label">Hole 5</string>
    <string name="hole6Label">Hole 6</string>
    <string name="hole7Label">Hole 7</string>
    <string name="hole8Label">Hole 8</string>
    <string name="hole9Label">Hole 9</string>
    <string name="hole10Label">Hole 10</string>
    <string name="hole11Label">Hole 11</string>
    <string name="hole12Label">Hole 12</string>
    <string name="hole13Label">Hole 13</string>
    <string name="hole14Label">Hole 14</string>
    <string name="hole15Label">Hole 15</string>
    <string name="hole16Label">Hole 16</string>
    <string name="hole17Label">Hole 17</string>
    <string name="hole18Label">Hole 18</string>
    <string name="radioButtonHoleLabel">Hole</string>
    <string name="holeSelectCD">Select the hole from this group</string>

    <!--LIST CONTENT DESCRIPTION-->
    <string name="playerListCD">This Button Selects the Player</string>
    <string name="playerIconCD">Clip Art of Player</string>


    <!--DIALOG STRING-->
    <string name="dialogAddButton">ADD</string>
    <string name="dialogCancelButton">CANCEL</string>
    <string name="dialogEditButton">EDIT</string>
    <string name="dialogChange">CHANGE</string>
    <string name="dialogClubNameHint">Club Name</string>
    <string name="dialogCourseNameHint">Course Name</string>
    <string name="dialogErrorMsg">All Fields Must Be Filled. Please Use Input Letters Hole Number Must Be Between 1 \- 36</string>
    <string name="dialogEditCourse">Edit Course</string>
    <string name="dialogEditPlayer">Edit Player</string>
    <string name="dialogOk">OK</string>
    <string name="dialogDelete">DELETE</string>
    <string name="dialogFirstNameHint">First Name</string>
    <string name="dialogLastNameHint">Last Name</string>
    <string name="playerAlreadyMsg">This Player is Already Added To the Round</string>

    <!--DATE FORMAT-->
    <string name="dateFormat" translatable="false">MMMM dd, yyyy</string>

    <!--START/SAVE ROUND-->
    <string name="noPlayer1ErrorMsg">You Must Add A First Player Before We Begin</string>
    <string name="noCourseErrorMsg">You Must Add A Course Before We Begin</string>
    <string name="safeRound">Your Round Is Safe With Me</string>
    <string name="mapButtonText">Map</string>
    <string name="holeButtonText">Hole</string>
    <string name="scorecardButtonText">Scorecard</string>
    <string name="tutorialButtonText">Tutorial</string>
    <string name="mapTutorial">Click anywhere on the map to add a distance marker. The distance and elevation appear automatically.    Press and hold down on the map to clear all markers.</string>
    <string name="gpsOffDialogTitle">Your GPS Is Turned Off</string>
    <string name="gpsOffMsg">You must turn on your GPS in order to have map capabilities</string>
    <string name="gpsEnableButtonText">TURN ON GPS</string>
    <string name="gpsOffDialogDismiss">DISMISS</string>
    <string name="badConnectionDialogTitle">Connection is Poor</string>
    <string name="badConnectionDialogMsg">Distances might still be available, but wind and elevation cannot display.   Will reconnect when available</string>
    <string name="mathDeletedialogYes">YES</string>
    <string name="matchDeleteDialogNo">NO</string>
    <string name="matchDeleteDialogTitle">Delete Round?</string>
    <string name="widgetValNA">N/A</string>
    <string name="CourseActivityDialogHoleCnt">Number of Holes</string>
    <string name="radioButtonHoleId">radioButtonHole</string>
    <string name="location_gps_is_disabled">Click Here To Turn \n On Location/GPS</string>
    <string name="show_map_tutorial">Show Map Tutorial</string>
    <string name="turn_on_location">turn on location</string>
    <string name="banner_logo">Banner Logo</string>
    <string name="copyrightNotice">© Sean Najera 2017. All rights reserved.</string>
    <string name="yahoo_weather_attribution">Yahoo Weather Attribution</string>
    <string name="playersHomeButtonText">\u0020\u0020\u0020\u0020Players\u0020\u0020\u0020</string>
    <string name="coursesHomeButtonText">\u0020\u0020\u0020Courses\u0020\u0020\u0020</string>
    <string name="playerSnackBarDelete">Deleted Player</string>
    <string name="snackbarUndo">UNDO</string>
    <string name="snackBarCourseDeleted">Course Deleted</string>
    <string name="p1Symbol">1.</string>
    <string name="p3Symbol">3.</string>
    <string name="p2Symbol">.2</string>
    <string name="p4Symbol">.4</string>
    <string name="snackbarRoundDeleted">Round Deleted</string>
</resources>