<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/lt_gray"
              android:contentDescription="@string/add_widget_content_description">

    <ListView
        android:id="@+id/widget_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/widgetTitleBarMargin"
        android:footerDividersEnabled="true"
        android:divider="@color/maroon"
        android:dividerHeight="3dp"
        tools:listitem="@layout/widget_list_item"/>

    <TextView
        android:id="@+id/widget_empty"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/widgetTitleBarMargin"
        android:layout_height="match_parent"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:textAppearance="?android:textAppearanceLarge"
        android:background="?android:attr/colorBackground"
        android:text="@string/empty_widget_list"/>

    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        style="@style/WidgetBar"
        android:layout_height="@dimen/widgetTitleBarMargin">

        <ImageView
            android:layout_width="wrap_content"
            android:contentDescription="@string/widgetTitleContentDescription"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/banner"/>

        <ImageView
            android:id="@+id/widget"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/widgetTitleContentDescription"
            android:layout_height="match_parent"
            android:src="@drawable/ic_sync_2"/>

    </FrameLayout>

</FrameLayout>